apps/studio/public/assets/css/preview-tw.css
/*! tailwindcss v4.3.0 | MIT License | https://tailwindcss.com */
@layer properties;
@layer theme, base, components, utilities;
@layer theme {
  :root,
  :host {
    --font-sans:
      var(--font-inter, "Inter"), ui-sans-serif, system-ui, sans-serif,
      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
      "Noto Color Emoji";
    --font-mono:
      ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
    --color-red-500: oklch(63.7% 0.237 25.331);
    --color-red-600: oklch(57.7% 0.245 27.325);
    --color-red-700: oklch(50.5% 0.213 27.518);
    --color-blue-700: oklch(48.8% 0.243 264.376);
    --color-indigo-50: oklch(96.2% 0.018 272.314);
    --color-indigo-500: oklch(58.5% 0.233 277.117);
    --color-indigo-600: oklch(51.1% 0.262 276.966);
    --color-indigo-700: oklch(45.7% 0.24 277.023);
    --color-gray-50: oklch(98.5% 0.002 247.839);
    --color-gray-100: oklch(96.7% 0.003 264.542);
    --color-gray-200: oklch(92.8% 0.006 264.531);
    --color-gray-300: oklch(87.2% 0.01 258.338);
    --color-gray-400: oklch(70.7% 0.022 261.325);
    --color-gray-500: oklch(55.1% 0.027 264.364);
    --color-gray-600: oklch(44.6% 0.03 256.802);
    --color-gray-700: oklch(37.3% 0.034 259.733);
    --color-gray-900: oklch(21% 0.034 264.665);
    --color-black: #000;
    --color-white: #fff;
    --spacing: 0.25rem;
    --breakpoint-lg: 64rem;
    --breakpoint-xl: 1240px;
    --container-sm: 24rem;
    --container-xl: 36rem;
    --container-2xl: 42rem;
    --container-3xl: 48rem;
    --container-5xl: 64rem;
    --container-7xl: 80rem;
    --text-xs: 0.75rem;
    --text-xs--line-height: calc(1 / 0.75);
    --text-sm: 0.875rem;
    --text-sm--line-height: calc(1.25 / 0.875);
    --text-base: 1rem;
    --text-base--line-height: calc(1.5 / 1);
    --text-lg: 1.125rem;
    --text-lg--line-height: calc(1.75 / 1.125);
    --text-xl: 1.25rem;
    --text-xl--line-height: calc(1.75 / 1.25);
    --text-3xl: 1.875rem;
    --text-3xl--line-height: calc(2.25 / 1.875);
    --text-4xl: 2.25rem;
    --text-4xl--line-height: calc(2.5 / 2.25);
    --text-5xl: 3rem;
    --text-5xl--line-height: 1;
    --font-weight-light: 300;
    --font-weight-medium: 500;
    --font-weight-semibold: 600;
    --font-weight-bold: 700;
    --tracking-tight: -0.022em;
    --tracking-wide: 0.025em;
    --tracking-wider: 0.05em;
    --tracking-widest: 0.1em;
    --radius-sm: 0.25rem;
    --radius-md: 0.375rem;
    --radius-lg: 0.5rem;
    --radius-2xl: 1rem;
    --drop-shadow-md: 0 3px 3px rgb(0 0 0 / 0.12);
    --ease-in: cubic-bezier(0.4, 0, 1, 1);
    --ease-out: cubic-bezier(0, 0, 0.2, 1);
    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
    --animate-spin: spin 1s linear infinite;
    --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
    --default-transition-duration: 150ms;
    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
    --breakpoint-xs: 576px;
    --animate-button-pulse: button-pulse 2s ease-in infinite;
    --animate-slide-up-fade-in: slide-up-fade-in 0.3s ease-in-out;
    --color-brand-canvas: var(--color-brand-canvas-default, #e6ecef);
    --color-brand-canvas-alt: #bfcfd7;
    --color-brand-canvas-inverse: #00405f;
    --color-brand-interaction: var(--color-brand-interaction-default, #00405f);
    --color-brand-interaction-hover: #002e44;
    --color-brand-interaction-pressed: #00283b;
    --color-base-canvas: #fff;
    --color-base-canvas-alt: oklch(98.5% 0.002 247.839);
    --color-base-canvas-backdrop: oklch(96.7% 0.003 264.542);
    --color-base-canvas-inverse: oklch(21% 0.006 285.885);
    --color-base-canvas-inverse-overlay: oklch(37% 0.013 285.805);
    --color-base-content: oklch(37.3% 0.034 259.733);
    --color-base-content-light: oklch(55.1% 0.027 264.364);
    --color-base-content-strong: oklch(21% 0.034 264.665);
    --color-base-content-medium: oklch(27.8% 0.033 256.848);
    --color-base-content-subtle: oklch(44.6% 0.03 256.802);
    --color-base-content-inverse: #fff;
    --color-base-content-inverse-subtle: oklch(70.5% 0.015 286.067);
    --color-base-divider-subtle: oklch(92.9% 0.013 255.508);
    --color-base-divider-medium: oklch(87.2% 0.01 258.338);
    --color-base-divider-inverse: #fff;
    --color-link: #1a56e5;
    --color-link-hover: #1547be;
    --color-link-visited: oklch(38% 0.189 293.745);
    --color-utility-highlight: oklch(82.8% 0.189 84.429);
    --color-utility-feedback-info: oklch(62.3% 0.214 259.815);
    --color-utility-feedback-info-subtle: oklch(93.2% 0.032 255.585);
    --color-utility-feedback-info-faint: #eaf2ff;
    --color-utility-feedback-warning: oklch(68.1% 0.162 75.834);
    --color-utility-feedback-warning-subtle: oklch(97.3% 0.071 103.193);
    --color-utility-feedback-alert: #b91c1c;
    --color-canvas-overlay: #00000066;
    --color-content: #333333;
    --color-hyperlink: #1361f0;
    --color-hyperlink-hover: #0d4fca;
    --color-hyperlink-visited: #530085;
    --color-divider-medium: #d0d0d0;
    --color-interaction-main-subtle-hover: #f4f9ff;
    --color-interaction-link-active: #333333;
    --color-interaction-support-placeholder: #838894;
    --color-site-primary: #f78f1e;
    --color-site-secondary: #4e4541;
  }
}
/* ... */

